tests/miniJava/neg/004900_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( int [] java , extends int [] java ) { return 0 ; } }
